add mail support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8089
 server.servlet.context-path=/community
-# Thymeleaf: ????????
+# Thymeleaf:
 spring.thymeleaf.cache=false
 
 # datasource
@@ -24,3 +24,14 @@ mybatis.configuration.use-generated-keys=true
 mybatis.configuration.map-underscore-to-camel-case=true
 
 #logging.level.com.example.demo=debug
+
+# mail properties
+#spring.mail.host = 123.126.45.161
+spring.mail.host = smtp.sina.com
+spring.mail.protocol = smtps
+spring.mail.port = 465
+spring.mail.username = wuyuhan2333@sina.com
+spring.mail.password = 77919970de1b5b1a
+spring.mail.properties.mail.stmp.ssl.enable = true
+spring.mail.properties.mail.smtl.auth=true
+
