--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <version>2.7.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
