--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,6 @@ spring.mail.password = 77919970de1b5b1a
 spring.mail.properties.mail.stmp.ssl.enable = true
 spring.mail.properties.mail.smtl.auth=true
 
-# 自定义的community
-community.path.domain = http://localhost:8080
+# 自定义的community,方便在代码中通过 @Value 注入
+community.path.domain = http://localhost:8089
 
