add update user header

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,4 +37,5 @@ spring.mail.properties.mail.smtl.auth=true
 
 # 自定义的community,方便在代码中通过 @Value 注入
 community.path.domain = http://localhost:8089
+community.path.upload=/Users/wuyuhan/IdeaProjects/data
 
