--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.31</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+            <scope>provided</scope>
+        </dependency>
 
 
     </dependencies>
