add followeeList display

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,5 +41,16 @@ community.path.upload=/Users/wuyuhan/IdeaProjects/data
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.database = 11
+# Redis持久化配置（选择其中一种方式）
+
+# RDB方式
+#spring.redis.save=10s # 持久化触发条件（10秒内至少1个键发生变化）
+#spring.redis.dir=/Users/wuyuhan/IdeaProjects/data/redis/datared # RDB文件保存路径
+
+# AOF方式
+spring.redis.appendonly=true # 开启AOF模式
+spring.redis.appendfilename=redis.aof # AOF文件名
+spring.redis.aofDir=/Users/wuyuhan/IdeaProjects/data/redis/data # AOF文件保存路径
+spring.redis.aofUseRdbPersistence=false # 是否同时使用RDB方式持久化
 
 
