add Kafka implement System advice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,9 +48,15 @@ spring.redis.database = 11
 #spring.redis.dir=/Users/wuyuhan/IdeaProjects/data/redis/datared # RDB文件保存路径
 
 # AOF方式
-spring.redis.appendonly=true # 开启AOF模式
-spring.redis.appendfilename=redis.aof # AOF文件名
-spring.redis.aofDir=/Users/wuyuhan/IdeaProjects/data/redis/data # AOF文件保存路径
-spring.redis.aofUseRdbPersistence=false # 是否同时使用RDB方式持久化
+#spring.redis.appendonly=true # 开启AOF模式
+#spring.redis.appendfilename=redis.aof # AOF文件名
+#spring.redis.aofDir=/Users/wuyuhan/IdeaProjects/data/redis/data # AOF文件保存路径
+#spring.redis.aofUseRdbPersistence=false # 是否同时使用RDB方式持久化
 
+
+# kafkaProperties
+spring.kafka.bootstrap-servers = localhost:9092
+spring.kafka.consumer.group-id = community-consumer-group
+spring.kafka.consumer.enable-auto-commit = true
+spring.kafka.consumer.auto-commit-interval = 3000
 
